add more section in home page

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,22 @@
     outline: 1px solid red; 
 } */
 
-.heading-text{
+.heading-34{
     font-size: 34px;
 }
-
+.heading-42{
+    font-size: 42px;
+}
+.font-family{
+    font-family: 'Courier New', Courier, monospace;
+}
+.font-20{
+    font-size: 20px;
+}
 .cols-padding {
     padding: 100px 0px;
 }
+
 
 .nav-bar{
     width: 100%;
@@ -103,17 +112,121 @@
 
 /* detail section  */
 
-.detail{
+.detail .details-section{
     position: relative;
 }
-.detail::before{
+.detail .details-section::before{
     content: "";
     position: absolute;
-    top: 0;
+    top: -130;
     left: 0;
-    width: 30%;
+    width: 70%;
     height: 100%;
     background-image: url("../assets/images/section-2-backgroundimage.png");
     background-size: cover;
     z-index: -1;
+}
+
+
+
+
+/* blog section  */
+
+.blog-first-image img{
+    width: 100%;
+    height: 100%
+}
+
+.blog-section{
+    background-color: #ebffff;
+    padding: 50px 0px  50px 0px;
+    position: relative;
+    overflow: hidden;
+}
+
+.blog-section::before{
+
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40%;
+    height: 70%;
+    background-image: url("../assets/images/section-4-background-image-1.png");
+    background-size: cover;
+    z-index: 1;
+
+}
+
+.blog-section::after{
+
+    content: "";
+    position: absolute;
+    left: -40px;
+    bottom: -40px;
+    width: 40%;
+    height: 100%;
+    background-image: url("../assets/images/section-4-background-image-4.png");
+    background-size: cover;
+    z-index: 1;
+    
+}
+
+
+
+.body-video-image{
+
+    padding: 100px 0px 150px 0px  ;
+    background-image: url('../assets/images/section-5-image-1.png');   
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+
+}
+
+
+
+/* body secion  */
+
+.body-video-section{
+
+    margin-bottom: 150px;
+
+}
+
+.body-video-image{
+    position: relative;
+}
+
+.body-video-first-image{
+    position: absolute;
+    width: 40%;
+    top: 70%;
+    left: 7.5%;
+}
+.body-video-second-image{
+    position: absolute;
+    width: 40%;
+    top: 70%;
+    right: 7.5%;
+}
+
+
+
+
+/* question-section  */
+
+
+.question-section{
+    position: relative;
+}
+
+.question-background-image{
+    position: absolute;
+    width: 17%;
+    top: -70px;
+    left : 0px;
+    z-index: -1;
+
 }
