--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@ img{
     padding: 100px 0px;
 }
 
+.heading-color{
+    color :#0F0F0F;
+}
+
+.text-color{
+    color: #848484 ;
+}
+
+
 
 .nav-bar{
     width: 100%;
@@ -234,6 +243,31 @@ img{
     z-index: -1;
 
 }
+
+
+/* gallery section  */
+
+/* Styling for the gallery */
+.container {
+  max-width: 1200px;
+  margin: auto;
+}
+
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+h2 {
+  font-family: 'Arial', sans-serif;
+  font-weight: 700;
+  color: #000;
+}
+
+
+
 
 
 /* appointment  */
