--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,6 +1,14 @@
 /* * {
     outline: 1px solid red; 
 } */
+.cormorant{
+    font-family: "Cormorant", serif;
+  }
+  
+  .raleway {
+      font-family: "Raleway", sans-serif;
+  }
+
 
 img{
     max-width: 100%;
