--- a/css/esella.css
+++ b/css/esella.css
@@ -2,6 +2,14 @@
     outline: 1px solid red; 
 } */
 
+.cormorant{
+    font-family: "Cormorant", serif;
+  }
+  
+  .raleway {
+      font-family: "Raleway", sans-serif;
+  }
+
 img{
     max-width: 100%;
 }
