--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,7 @@ img{
     background-color: #0F0F0F;
 }
 
-.banner-second-image{
-    margin-top: -120px ;
-}
+
 
 
 
@@ -88,7 +86,7 @@ img{
 
 
 /* banner images  */
-
+/* 
 
 .front-text{
     margin-left: 20px;
@@ -96,7 +94,7 @@ img{
 .front-text h1{
     padding-top: 20px;
    font-size: 84px;
-}
+} */
 
 
 /* blog section  */
@@ -206,10 +204,7 @@ img{
 /* gallery section  */
 
 /* Styling for the gallery */
-.container {
-  max-width: 1200px;
-  margin: auto;
-}
+
 
 
 img {
