complete on sexual page

--- a/css/body.css
+++ b/css/body.css
@@ -88,10 +88,13 @@ img{
 /* // body secion  // */
 
 .body-video-image{
-
-    padding: 100px 0px 150px 0px  ;
-    background-image: url('../assets/body-images/fetuares-image-1.png');   
+    padding: 100px 0px 200px 0px  ;
+    background-image: url('../assets/images/section-5-image-1.png');   
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.bg-footer{
+    background-color: #0F0F0F;
 }
