--- a/css/body.css
+++ b/css/body.css
@@ -98,3 +98,12 @@ img{
 .bg-footer{
     background-color: #0F0F0F;
 }
+
+
+
+
+#accordion-collapsde h2 button {
+
+    background-color: #EBFFFF;
+
+} 
