colour in mid screen

--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,13 @@ img{
 
 
 
-.bg-img-header {
-
-    background-color: #0F0F0F;
-
+@media (max-width: 768px) {
+    .bg-img-header {
+        background-color: #0F0F0F;
+    }
+}
+@media (max-width: 1024px){
+    .bg-img-header {
+        background-color: #0F0F0F;
+    }
 }
