--- a/css/blog.css
+++ b/css/blog.css
@@ -79,3 +79,15 @@ img{
 .bg-footer{
     background-color: #0F0F0F;
 }
+
+
+@media (max-width: 768px) {
+    .bg-img-header {
+        background-color: #0F0F0F;
+    }
+}
+@media (max-width: 1024px){
+    .bg-img-header {
+        background-color: #0F0F0F;
+    }
+}
