--- a/css/body.css
+++ b/css/body.css
@@ -57,12 +57,18 @@ img{
 
  /* header  */
 
- .nav-bar{
+ header{
+    position: absolute;
+    top: 0;
+    z-index: 100;
     width: 100%;
-    position: absolute !important;
+}
+.nav-bar{
+    width: 100%;
+    position: sticky !important;
     z-index: 99;
+    top: 0;
   }
-
 
 /* main banner  */
 
@@ -107,6 +113,11 @@ img{
     background-color: #EBFFFF;
 
 } 
+
+.bg-img-header1{
+    background-color: #0F0F0F;
+}
+
 
 
 @media (max-width: 768px) {
