--- a/css/faceAndNeck.css
+++ b/css/faceAndNeck.css
@@ -56,13 +56,18 @@ img{
 
  /* header  */
 
- .nav-bar{
+ header{
+    position: absolute;
+    top: 0;
+    z-index: 100;
     width: 100%;
-    position: absolute !important;
+}
+.nav-bar{
+    width: 100%;
+    position: sticky !important;
     z-index: 99;
+    top: 0;
   }
-
-
 /* main banner  */
 
 
@@ -86,6 +91,10 @@ img{
 }
 
 .bg-footer{
+    background-color: #0F0F0F;
+}
+
+.bg-img-header1{
     background-color: #0F0F0F;
 }
 
