--- a/css/sexual.css
+++ b/css/sexual.css
@@ -108,6 +108,16 @@ img{
     background-color: #0F0F0F;
 }
 
+#accordion-collapsde h2 button {
+
+    background-color: #EBFFFF;
+
+} 
+
+#accordion-collapsde h2{
+    color: #0F0F0F;
+}
+
 
 @media (max-width: 768px) {
     .bg-img-header {
