--- a/css/sexual.css
+++ b/css/sexual.css
@@ -129,3 +129,20 @@ img{
         background-color: #0F0F0F;
     }
 }
+
+
+@media screen and (max-width: 768px) {
+    #mobile-menu-2 {
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
+.myclass{
+    width: 100% !important;
+    height: 100vh !important;
+    position: absolute;
+    top: 0;
+    
+    overflow: hidden;
+}
